webkitgtk (1.10.2-2) experimental; urgency=low

  * Integrate patches and acknowledge NMUs; thanks to Ansgar Burchardt
    <ansgar@debian.org>, and Michael Gilbert <mgilbert@debian.org>
  * debian/control, debian/rules:
  - switch to building with GStreamer 1.0
  * debian/control:
  - added ruby to the Build-Dependencies, it is now required
    for building WebKit

 -- Gustavo Noronha Silva <kov@debian.org>  Sun, 24 Feb 2013 12:05:45 -0300

webkitgtk (1.10.2-1) experimental; urgency=low

  * New stable release
  - source package renamed following upstream
  - Includes the WebCore split patches, so the make command line
    limit problem should not happen
  * Acknowledge NMU to fix FreeBSD and Hurd, thanks to Samuel
    Thibault <sthibault@debian.org>
  * Acknowledge NMU to change deb compression to xz, thanks to
    Ansgar Burchardt <ansgar@debian.org>
  * Acknowledge NMU to use smaller debug format for ia64 as well,
    thanks to Ansgar Burchardt <ansgar@debian.org>
  * debian/*.symbols:
  - updated
  * debian/control:
  - bump libsoup dependency to 2.40 accross the board,
    following upstream's bump but using the first stable
    release instead of the development one
  * debian/*webkit2*, debian/rules, debian/control:
  - new packages for the WebKit2GTK+ library, not built by default, you
    can enable them by setting the make ENABLE_WEBKIT2 variable to yes

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 05 Dec 2012 23:41:36 -0200

webkit (1.9.2-1) experimental; urgency=low

  * New development release
  * debian/patches/10_kfreebsd_support.patch:
  - removed; applied upstream
  * debian/rules:
  - disable AR_FLAGS space optimization for now, since linking two libtool
    convenience libraries seems to break that
  * debian/*.symbols:
  - updated with symbols of the new version

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 08 May 2012 12:01:33 -0300

webkit (1.8.1-3.4) unstable; urgency=medium

  * Non-maintainer upload.