@@ -103,8 +103,7 @@ ifeq (2.0,$(filter 2.0,$(GTK_VERSIONS)))
 		--enable-introspection \
 		--enable-geolocation \
 		--with-gstreamer=1.0 \
-		--disable-webkit2 --disable-plugin-process; \
-	cd ..
+		--disable-webkit2 --disable-plugin-process
 endif
 
 ifeq (3.0,$(filter 3.0,$(GTK_VERSIONS)))
@@ -125,8 +124,7 @@ ifeq (3.0,$(filter 3.0,$(GTK_VERSIONS)))
 		--enable-gtk-doc \
 		--enable-introspection \
 		--enable-geolocation \
-		$(EXTRA_CONFIGURE_ARGUMENTS); \
-	cd ..
+		$(EXTRA_CONFIGURE_ARGUMENTS)
 endif
 
 	set -e; for version in $(GTK_VERSIONS); do \
